# examples

netdem/examples/: CMakeLists.txt
netdem/examples/00_random_packing/: 1_gjk_solver.py  2_sdf_solver.py  3_gap_graded.py  4_cubic_packing.py  4_cylindrical_packing.py  5_voronoi_cylinder.py  6_voronoi_box.py  CMakeLists.txt
netdem/examples/01_odemetric_comp/: CMakeLists.txt
netdem/examples/02_triaxial_comp/: 2_triaxial_comp.py  CMakeLists.txt
netdem/examples/03_angle_repose/: CMakeLists.txt
netdem/examples/04_blade_mixing/: CMakeLists.txt
netdem/examples/05_rotate_drum/: CMakeLists.txt  rotate_drum.py
netdem/examples/06_funnel_pack/: CMakeLists.txt  funnel.py
netdem/examples/10_cone_penetration/: cone_cad.stl  cone_penetration_sphere.py
netdem/examples/11_simple_shear/: simple_shear_sphere_v0.py  simple_shear_sphere_v1.py  simple_shear_sphere_v2.py  simple_shear_trimesh_v2.py
netdem/examples/90_polybezier_model/: CMakeLists.txt
netdem/examples/91_gjk_erosion_issue/: CMakeLists.txt  readme.md
netdem/examples/92_potential_models/: CMakeLists.txt  batch_contact_test.sh  batch_energy_test.sh  batch_friction_test.sh  batch_rockfall.sh  batch_simulation.sh  batch_size_effect.sh
netdem/examples/93_netdem/: CMakeLists.txt  batch_simulation.sh  readme.md
netdem/examples/94_deformable_particle/: CMakeLists.txt
netdem/examples/95_contact_mechanics/: CMakeLists.txt
netdem/examples/96_sdf_dem/: CMakeLists.txt  batch_ev_porosity.sh  batch_scp_to_local.sh  batch_simulation.sh
netdem/examples/98_landslide/: CMakeLists.txt  test_gen_wire_net.py  (+1 more)
(+51 files in other folders)
